# selenium_tutorial

./: README.md  main.py  pyproject.toml  responsive_tester.py
