[tool.poetry]
name = "seleniumpro"
version = "0.1.0"
description = ""
authors = ["kimspractice <tpghksdldia@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.7.2"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
